add 20 functional cards with drop capability

--- a/index.html
+++ b/index.html
@@ -8,5 +8,106 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
+    <div class="container main">
+      <div class="heading">
+        <h1>Welcome to our JavaScript and jQuerty Learning page!</h1>
+        <p>Here we have a list of common terms and concepts to start you off.</p>
+      </div>
+      <div class="container cards">
+        <div class="row row1 container">
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="JS">JavaScript</h1>
+            <p class="definition">An object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="operators">Operators</h1>
+            <p class="definition">A symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="variables">Variables</h1>
+            <p class="definition">Variables can be thought of as named containers. You can place data into these containers and then refer to the data simply by naming the container. Before you use a variable in a JavaScript program, you must declare it.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="namingConventions">Naming Conventions</h1>
+            <p class="definition">Improves code readability and makes code maintenance easier</p>
+          </div>
+        </div>
+        <div class="row row2 container"> <!--END OF ROW1 -->
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="functions">Functions</h1>
+            <p class="definition">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="methods">Methods</h1>
+            <p class="definition">JavaScript methods are the actions that can be performed on objects. A JavaScript method is a property containing a function definition. Property. Value.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="arguments">Arguments</h1>
+            <p class="definition">The arguments object is a local variable available within all functions. You can refer to a function's arguments within the function by using the arguments object.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="parameters">Parameters</h1>
+            <p class="definition">Arguments are Passed by Value. The parameters, in a function call, are the function's arguments. JavaScript arguments are passed by value: The function only gets to know the values, not the argument's locations. If a function changes an argument's value, it does not change the parameter's original value.</p>
+          </div>
+        </div>
+
+        <div class="row row3 container">
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="return">Return</h1>
+            <p class="definition">In JavaScript, return statements cease execution in a function and return a value to the caller; JavaScript functions require an explicit return statement for returning the result of an expression (the value) from a function. When a return statement is not present, the interpreter automatically returns undefined.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="chainingMethods">Chaining Methods</h1>
+            <p class="definition">Method chaining is a technique that can be used to simplify code in scenarios that involve calling multiple functions on the same object consecutively.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="strings">Strings</h1>
+            <p class="definition">A JavaScript string stores a series of characters like "John Doe". A string can be any text inside double or single quotes.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="booleans">Booleans</h1>
+            <p class="definition">A JavaScript Boolean represents one of two values: true or false.</p>
+          </div>
+        </div>
+
+        <div class="row row4 container">
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="undefined">Undefined</h1>
+            <p class="definition">s typeof returns undefined, undefined is a type where as null is an initializer indicates the variable points to no object(virtually everything in Javascript is an object).</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="nan">NaN</h1>
+            <p class="definition">Not a Number</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="escape">Escape</h1>
+            <p class="definition">A string will be chopped to if we include quotation marks. The solution to avoid this problem, is to use the \ escape character. The backslash escape character turns special characters into string characters.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="alert">Alert</h1>
+            <p class="definition">Alert(message); message is an optional string of text you want to display in the alert dialog.</p>
+          </div>
+        </div>
+
+        <div class="row row5 container">
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="comments">Comments</h1>
+            <p class="definition">To create a single line comment in JavaScript, you place two slashes "//" in front of the code or text you wish to have the JavaScript interpreter ignore. When you place these two slashes, all text to the right of them will be ignored, until the next line.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="jq">jQuery</h1>
+            <p class="definition">Query is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="attributes">Attributes</h1>
+            <p class="definition">One dynamic property is the attributes property of DOM elements.  This attributes property provides the names and values of every attribute on a given element!</p>
+          </div>
+          <div class="col-md-3">
+            <h1 class="cardTitle" id="faqs">FAQs</h1>
+            <a class="definition" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjJ8-zB0_LUAhUJ0GMKHcLDCGEQFggiMAA&url=https%3A%2F%2Fwww.javascript.com%2F&usg=AFQjCNGCee6O6hzOZ5e_LfIIET3TV_Ewig">
+          </div>
+        </div>
+      </div>
+    </div> <!--END OF CONTAINER CARDS -->
   </body>
 </html>
