create separate buttons with spacing

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
           </div>
           <div class="col-md-3">
             <h1 class="cardTitle" id="parameters">Parameters</h1>
-            <p class="definition">Arguments are Passed by Value. The parameters, in a function call, are the function's arguments. JavaScript arguments are passed by value: The function only gets to know the values, not the argument's locations. If a function changes an argument's value, it does not change the parameter's original value.</p>
+            <p class="definition">Arguments are Passed by Value. The parameters, in a function call, are the function's arguments. JavaScript arguments are passed by value: The function only gets to know the values, not the argument's locations.</p>
           </div>
         </div>
 
         <div class="row row3 container">
           <div class="col-md-3">
             <h1 class="cardTitle" id="return">Return</h1>
-            <p class="definition">In JavaScript, return statements cease execution in a function and return a value to the caller; JavaScript functions require an explicit return statement for returning the result of an expression (the value) from a function. When a return statement is not present, the interpreter automatically returns undefined.</p>
+            <p class="definition">In JavaScript, return statements cease execution in a function and return a value to the caller; JavaScript functions require an explicit return statement for returning the result of an expression (the value) from a function.</p>
           </div>
           <div class="col-md-3">
             <h1 class="cardTitle" id="chainingMethods">Chaining Methods</h1>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-md-3">
             <h1 class="cardTitle" id="faqs">FAQs</h1>
-            <a class="definition" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjJ8-zB0_LUAhUJ0GMKHcLDCGEQFggiMAA&url=https%3A%2F%2Fwww.javascript.com%2F&usg=AFQjCNGCee6O6hzOZ5e_LfIIET3TV_Ewig">
+            <p class="definition"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjJ8-zB0_LUAhUJ0GMKHcLDCGEQFggiMAA&url=https%3A%2F%2Fwww.javascript.com%2F&usg=AFQjCNGCee6O6hzOZ5e_LfIIET3TV_Ewig">Click Here!</a></p>
           </div>
         </div>
       </div>
