massively improved code reduction with implementation of this method

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <h1 class="cardTitle" id="chainingMethods">Chaining Methods</h1>
             <p class="definition">Method chaining is a technique that can be used to simplify code in scenarios that involve calling multiple functions on the same object consecutively.</p>
           </div>
-          <div class="col-md-3">
-            <h1 class="cardTitle" id="strings">Strings</h1>
+          <div class="col-md-3" id="strings">
+            <h1 class="cardTitle">Strings</h1>
             <p class="definition">A JavaScript string stores a series of characters like "John Doe". A string can be any text inside double or single quotes.</p>
           </div>
           <div class="col-md-3">
